App: Fix placeholder spacing in find friends panel

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -90,6 +90,7 @@ a:active {
   .main-placeholder {
     text-align: center;
     margin-top: 100px;
+    margin-bottom: 100px;
   }
 }
 
